--- a/index.html
+++ b/index.html
@@ -55,18 +55,13 @@
             This benefits plugins and apps hosted by a global shell
         -->
         <base target="_top" />
-      <script type="module" crossorigin src="./assets/main-BqWh_QFX.js"></script>
+      <script type="module" crossorigin src="./assets/main-10wtQSzx.js"></script>
       <link rel="stylesheet" crossorigin href="./assets/main-Dmx4sX17.css">
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="dhis2-app-root"></div>
         <div id="dhis2-portal-root"></div>
-
-        <!-- Polyfill to add `global` for Material UI -->
-        <script>
-            var global = global || window
-        </script>
 
         <!-- The entrypoint for Vite -->
 
